The --no-cache on docker build is useless, the files are old every time, and node_modules are copied instead of installed.

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -5,7 +5,8 @@ WORKDIR /usr/nextjs
 COPY ./client/package.json .
 COPY ./yarn.lock .
 
-RUN yarn install
+RUN mkdir node_modules
+COPY ./node_modules ./node_modules
 
 RUN mkdir .next
 RUN mkdir public
