--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "turbo run build --concurrency=3",
     "test": "turbo run test --concurrency=3",
     "dev": "turbo run dev --concurrency=3",
-    "docker:build": "docker compose build --no-cache",
+    "docker:build": "docker compose build",
     "docker:up": "docker compose up -d --build",
     "docker:start": "docker compose start",
     "docker:stop": "docker compose stop",
