Mount network when cancelling container orchestration, code mount volume

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "turbo run test --concurrency=3",
     "dev": "turbo run dev --concurrency=3",
     "docker:build": "docker compose build",
-    "docker:up": "docker compose up -d --build",
+    "docker:up": "docker compose up -d",
     "docker:start": "docker compose start",
     "docker:stop": "docker compose stop",
     "docker:rm": "docker compose rm"
