Fallback to mounting the network when cancelling container orchestration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       - MONGO_INITDB_DATABASE=nextjs
     volumes:
       - nextjs-mongo-data:/data/db
+    networks:
+      - nextjs-net
     restart: always
 
   nextjs-server:
@@ -23,6 +25,8 @@ services:
       - PORT=4000
       - MONGO_URL=mongodb://admin:m11615@nextjs-mongo:27017/nextjs?authSource=admin
       - CORS_ORIGIN_URL=http://nextjs-client:4001
+    networks:
+      - nextjs-net
     depends_on:
       - nextjs-mongo
     restart: always
@@ -36,6 +40,8 @@ services:
       - "4001:4001"
     environment:
       - NEXT_PUBLIC_API_URL=http://nextjs-server:4000/api
+    networks:
+      - nextjs-net
     depends_on:
       - nextjs-server
     restart: always
@@ -43,3 +49,7 @@ services:
 volumes:
   nextjs-mongo-data:
     driver: local
+
+networks:
+  nextjs-net:
+    driver: bridge
