--- a/client/package.json
+++ b/client/package.json
@@ -9,26 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/env": "^15.3.2",
+    "@next/env": "15.4.0-canary.51",
     "accept-language": "^3.0.20",
     "cross-env": "^7.0.3",
-    "i18next": "^25.1.3",
+    "i18next": "^25.2.1",
     "i18next-browser-languagedetector": "^8.1.0",
     "i18next-resources-to-backend": "^1.2.1",
     "next": "15.3.2",
     "next-i18next": "^15.4.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-i18next": "^15.5.1"
+    "react-i18next": "^15.5.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
     "@tailwindcss/postcss": "^4.1.7",
-    "@types/node": "^22.15.18",
-    "@types/react": "^19.1.4",
+    "@types/node": "^22.15.21",
+    "@types/react": "^19.1.5",
     "@types/react-dom": "^19.1.5",
     "eslint": "^9.27.0",
-    "eslint-config-next": "15.3.2",
+    "eslint-config-next": "15.4.0-canary.51",
     "tailwindcss": "^4.1.7",
     "typescript": "^5.8.3"
   }
