--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "cross-env PORT=3001 next dev --turbopack",
-    "build": "next build",
-    "start": "cross-env PORT=4001 next start",
+    "dev": "cross-env PORT=3001 NODE_ENV=development next dev --turbopack",
+    "build": "cross-env NODE_ENV=production next build",
+    "start": "cross-env PORT=4001 NODE_ENV=production next start",
     "lint": "next lint"
   },
   "dependencies": {
