--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -2,6 +2,7 @@ FROM node:22-alpine
 
 WORKDIR /usr/nextjs
 
+COPY ./server/.env.production.local .
 COPY ./server/package.json .
 COPY ./yarn.lock .
 
