--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     ports:
       - "27017:27017"
     environment:
+      - TZ=Asia/Shanghai
       - MONGO_INITDB_ROOT_USERNAME=admin
       - MONGO_INITDB_ROOT_PASSWORD=m11615
       - MONGO_INITDB_DATABASE=nextjs
@@ -21,6 +22,8 @@ services:
     container_name: nextjs-server
     ports:
       - "4000:4000"
+    environment:
+      - TZ=Asia/Shanghai
     networks:
       - nextjs-network
     depends_on:
@@ -34,6 +37,8 @@ services:
     container_name: nextjs-client
     ports:
       - "4001:4001"
+    environment:
+      - TZ=Asia/Shanghai
     networks:
       - nextjs-network
     extra_hosts:
