--- a/server/package.json
+++ b/server/package.json
@@ -6,13 +6,13 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "build": "cross-env NODE_ENV=production nest build",
+    "build": "cross-env NODE_ENV=production TZ=UTC nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "cross-env NODE_ENV=production nest start",
-    "dev": "cross-env NODE_ENV=development nest start --watch",
-    "start:dev": "cross-env NODE_ENV=development nest start --watch",
-    "start:debug": "cross-env NODE_ENV=development nest start --debug --watch",
-    "start:prod": "cross-env NODE_ENV=production node dist/main",
+    "start": "cross-env NODE_ENV=production TZ=UTC nest start",
+    "dev": "cross-env NODE_ENV=development TZ=UTC nest start --watch",
+    "start:dev": "cross-env NODE_ENV=development TZ=UTC nest start --watch",
+    "start:debug": "cross-env NODE_ENV=development TZ=UTC nest start --debug --watch",
+    "start:prod": "cross-env NODE_ENV=production TZ=UTC node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
